--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
   <!-- Start Page -->
   <div id="start" class="text-center">
     <button id="startButton" class="bg-blue-500 text-white px-6 py-3 rounded-lg shadow-lg hover:bg-blue-600">
-      Click Here
+      Click Here Boo Boo
     </button>
   </div>
 
